--- a/incident-management/app/incidents/webapp/manifest.json
+++ b/incident-management/app/incidents/webapp/manifest.json
@@ -17,7 +17,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/odata/v4/processor/",
+        "uri": "/odata/V2/processor/",
         "type": "OData",
         "settings": {
           "annotations": [],
