--- a/incident-mngent/package.json
+++ b/incident-mngent/package.json
@@ -10,10 +10,21 @@
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.9.0"
+    "@cap-js/cds-types": "^0.9.0",
+    "@cap-js/sqlite": "^1.9.0"
   },
   "scripts": {
     "start": "cds-serve"
-  }
+  },
+
+  "cds": { "requires": {
+    "db": {
+       "kind": "sqlite",
+       "model": "*",
+       "credentials": { "url": "./db/sqlite/db.sqlite" } 
+    }
+  }}
+  
 }
+
+
