app add report sqlite

--- a/incident-mngent/package.json
+++ b/incident-mngent/package.json
@@ -21,9 +21,10 @@
     "requires": {
       "db": {
         "kind": "sqlite",
-        "model": "*",
+        "schema_evolution": "auto",
+        "model": "db/sqlite",
         "credentials": {
-          "url": "./db/sqlite/db.sqlite"
+          "url": "db/sqlite/db.sqlite"
         }
       }
     }
