--- a/incident-mngent/_i18n/i18n.properties
+++ b/incident-mngent/_i18n/i18n.properties
@@ -13,3 +13,18 @@ Urgency=Urgency
 
 #XFLD,120: Label for a column title
 Status1=Status
+
+#XFLD,50: Section Label
+Overview=Overview
+
+#XFLD,50: Section Label
+Details=Details
+
+#XFLD,50: Label for a section
+GeneralInformation=General Information
+
+#XFLD,50: Section Label
+Conversation=Conversation 
+
+#XFLD,120: Label for a column title
+Message=message
