annotate sqlite memory package.json

--- a/incident-mngent/package.json
+++ b/incident-mngent/package.json
@@ -24,7 +24,7 @@
         "schema_evolution": "auto",
         "model": "db/sqlite",
         "credentials": {
-          "url": "db/sqlite/db.sqlite"
+          "url": ":memory:"
         }
       }
     }
