--- a/incident-mngent/package.json
+++ b/incident-mngent/package.json
@@ -10,15 +10,45 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@cap-js/cds-test": "^0.2.0",
     "@cap-js/cds-types": "^0.9.0",
-    "@cap-js/sqlite": "^1.9.0"
+    "@cap-js/sqlite": "^1.9.0",
+    "axios": "^1.8.4",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "chai-subset": "^1.6.0",
+    "jest": "^29.7.0"
   },
   "scripts": {
+    "test": "jest tests/test.js",
     "start": "cds-serve",
     "watch-incidents": "cds watch --open incidents/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
     "requires": {
+      "[development]": {
+        "auth": {
+          "kind": "mocked",
+          "users": {
+            "incident.support@tester.sap.com": {
+              "password": "initial",
+              "roles": [
+                "support"
+              ]
+            },
+            "alice": {
+              "roles": [
+                "support"
+              ]
+            },
+            "bob": {
+              "roles": [
+                "support"
+              ]
+            }
+          }
+        }
+      },
       "db": {
         "kind": "sqlite",
         "schema_evolution": "auto",
