--- a/eur-incident-management/app/incidents/webapp/manifest.json
+++ b/eur-incident-management/app/incidents/webapp/manifest.json
@@ -17,11 +17,25 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/odata/v4/processor/",
+        "uri": "odata/v4/processor/",
         "type": "OData",
         "settings": {
           "annotations": [],
           "odataVersion": "4.0"
+        }
+      }
+    },
+    "crossNavigation": {
+      "inbounds": {
+        "incidents-display": {
+          "semanticObject": "incidents",
+          "action": "display",
+          "title": "Incidnt Mgmnt",
+          "subTitle": "Subtitulo",          
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
         }
       }
     }
@@ -147,5 +161,9 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
-  }
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "incidents"
+  }  
 }
