--- a/eur-incident-management/package.json
+++ b/eur-incident-management/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8",
     "axios": "^1.8.4",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
@@ -54,7 +55,10 @@
         "db": "hana",
         "auth": "xsuaa"
       },
-      "html5-repo": true
+      "html5-repo": true,
+      "destinations": true,
+      "html5-runtime": true,
+      "workzone": true
     },
     "sql": {
       "native_hana_associations": false
