--- a/eur-incident-management/app/incidents/xs-app.json
+++ b/eur-incident-management/app/incidents/xs-app.json
@@ -5,7 +5,7 @@
     {
       "source": "^/?odata/(.*)$",
       "target": "/odata/$1",
-      "destination": "srv-api",
+      "destination": "eur-incident-management-srv-api",
       "authenticationType": "xsuaa",
       "csrfProtection": true
     },
